Switch to Modrinth API for update checker